test/bpmn/invalid/inclusive-gateway-join.bpmn
<definitions id="test">
  <process id="inclusiveGatewayJoinTest" isExecutable="true">
    <startEvent id="startEvent">
      <outgoing>f1</outgoing>
    </startEvent>
    <sequenceFlow id="f1" sourceRef="startEvent" targetRef="fork" />
    <inclusiveGateway id="fork">
      <incoming>f1</incoming>
      <outgoing>f2</outgoing>
      <outgoing>f3</outgoing>
    </inclusiveGateway>
    <sequenceFlow id="f2" sourceRef="fork" targetRef="join" />
    <sequenceFlow id="f3" sourceRef="fork" targetRef="join" />
    <inclusiveGateway id="join">
      <incoming>f2</incoming>
      <incoming>f3</incoming>
      <outgoing>f4</outgoing>
    </inclusiveGateway>
    <sequenceFlow id="f4" sourceRef="join" targetRef="endEvent" />
    <endEvent id="endEvent">
      <incoming>f4</incoming>
    </endEvent>
  </process>
</definitions>
